fix(KUI-1471): add white space pre-wrap to alteration text styling

--- a/public/css/kursutveckling-web.scss
+++ b/public/css/kursutveckling-web.scss
@@ -271,6 +271,10 @@ body.use-personal-menu {
   word-wrap: break-word;
 }
 
+.info-box #alteration-text {
+  white-space: pre-wrap;
+}
+
 /*Mobile View for Tables*/
 /* 
 Max width before this PARTICULAR table gets nasty
